@@ -3,6 +3,7 @@ soprano (2.7.6+dfsg.1-0r1) UNRELEASED; urgency=low
   [ Pino Toscano ]
   * New upstream release:
     - soprano does not use installdox anymore. (Closes: #674346)
+  * Refresh the patches.
   * Bump Standards-Version to 3.9.3, no changes required.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Dec 2011 10:44:51 -0300
